--- a/src/layouts/Dashboard/Navigation/style.module.scss
+++ b/src/layouts/Dashboard/Navigation/style.module.scss
@@ -6,7 +6,7 @@ $navAccentColor: #eeedfc;
 .navigation {
   padding: 20px;
   background-color: $navPrimaryColor;
-  width: 300px;
+  width: 20%;
   position: fixed;
   top: 0;
   left: 0;
