--- a/src/layouts/Dashboard/style.module.scss
+++ b/src/layouts/Dashboard/style.module.scss
@@ -1,7 +1,6 @@
 .mainPage {
-  flex: 1;
   // border: 10px solid red;
-  margin-left: 300px;
+  margin-left: 20%;
   padding-top: 30px;
   padding-left: 10px;
 }
