--- a/src/pages/Dashboard/style.module.scss
+++ b/src/pages/Dashboard/style.module.scss
@@ -1,3 +1,5 @@
+@import '@styles/variables';
+
 .AnalyticCard1 {
   padding: 20px 0;
 
@@ -23,5 +25,28 @@
   padding: 16px;
 
   .userListItem {
+    display: flex;
+    align-items: center;
+    padding: 12px;
+    border-radius: 8px;
+
+    img {
+      border-radius: 50%;
+      margin-right: 1.5em;
+    }
+
+    a {
+      text-decoration: none;
+      color: #000;
+      font-size: 1.2em;
+    }
+
+    &:hover {
+      background-color: $primaryAccentColor;
+
+      * {
+        color: #fff;
+      }
+    }
   }
 }
