--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -1,17 +1,17 @@
-.form-control {
-  display: block;
-  width: 100%;
-  padding: 8px 4px;
-  border-radius: 6px;
-  border: 1px outset #fff;
-  // background-color: inherit;
-  margin: 5px auto;
-}
+// .form-control {
+//   display: block;
+//   width: 100%;
+//   padding: 8px 4px;
+//   border-radius: 6px;
+//   border: 1px outset #fff;
+//   // background-color: inherit;
+//   margin: 5px auto;
+// }
 
-.form-group {
-  margin: 10px auto;
+// .form-group {
+//   margin: 10px auto;
 
-  label {
-    font-size: 1.2em;
-  }
-}
+//   label {
+//     font-size: 1.2em;
+//   }
+// }
